// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Checkbox /> renders correctly 1`] = `
<View
  style={
    Object {
      "flexBasis": "50%",
    }
  }
>
  <View
    accessibilityRole="checkbox"
    accessibilityState={
      Object {
        "checked": false,
      }
    }
    accessible={true}
    collapsable={false}
    focusable={false}
    onClick={[Function]}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    style={
      Object {
        "backgroundColor": "#fff",
        "borderColor": "#ededed",
        "borderRadius": 3,
        "borderWidth": 0,
        "margin": 5,
        "marginLeft": 10,
        "marginRight": 10,
        "opacity": 1,
        "padding": 0,
      }
    }
    testID="checkbox"
  >
    <View
      style={
        Object {
          "alignItems": "center",
          "flexDirection": "row",
        }
      }
    >
      <Text />
      <Text
        style={
          Object {
            "color": "#43484d",
            "fontWeight": "normal",
            "marginLeft": 10,
            "marginRight": 10,
            "textTransform": "capitalize",
          }
        }
        testID="checkboxTitle"
      >
        OK
      </Text>
    </View>
  </View>
</View>
`;

exports[`<Checkbox /> renders correctly when active 1`] = `
<View
  style={
    Object {
      "flexBasis": "50%",
    }
  }
>
  <View
    accessibilityRole="checkbox"
    accessibilityState={
      Object {
        "checked": true,
      }
    }
    accessible={true}
    collapsable={false}
    focusable={false}
    onClick={[Function]}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    style={
      Object {
        "backgroundColor": "#fff",
        "borderColor": "#ededed",
        "borderRadius": 3,
        "borderWidth": 0,
        "margin": 5,
        "marginLeft": 10,
        "marginRight": 10,
        "opacity": 1,
        "padding": 0,
      }
    }
    testID="checkbox"
  >
    <View
      style={
        Object {
          "alignItems": "center",
          "flexDirection": "row",
        }
      }
    >
      <Text />
      <Text
        style={
          Object {
            "color": "#43484d",
            "fontWeight": "normal",
            "marginLeft": 10,
            "marginRight": 10,
            "textTransform": "capitalize",
          }
        }
        testID="checkboxTitle"
      >
        OK
      </Text>
    </View>
  </View>
</View>
`;
